--- a/config.json
+++ b/config.json
@@ -24,8 +24,8 @@
     "whiteListIds": [],
     "notes": "if you enable this feature, only the ids in the whiteListIds section can use the bot"
   },
-  "nickNameBot": "Your Hinata Baby",
-  "prefix": "!",
+  "nickNameBot": "subaru",
+  "prefix": "/",
   "database": {
     "type": "sqlite",
     "uriMongodb": "",
